--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
           <p>GIFMAGAZINE is the web service to create, upload, share and search animation gifs.</p>
         </li>
         <li>
+          <a href="http://cre-m.jp/" target="_blank">CREM</a>
+          <p>CREM is an creative Internet media, which has gif manga, movie introduction, "spot the difference" etc...</p>
+        </li>
+        <li>
           <a href="http://www.yomejiman.com/" target="_blank">Yomejiman</a>
           <p>Photo boards to share what you love.</p>
         </li>
