fixed source path

--- a/canvas_painter_gif/index.html
+++ b/canvas_painter_gif/index.html
@@ -13,17 +13,17 @@
 
 	Additional Contributions by: Morris Johns
 -->
-<script type="text/javascript" src="./canvas_painter_gif/cp_depends.js"></script>
+<script type="text/javascript" src="./cp_depends.js"></script>
 <!--[if lte IE 8]>
 <script type="text/javascript" src="./excanvas.js"></script>
 <![endif]-->
-<script src="./canvas_painter_gif/gif.js" type="text/javascript"></script>
-<script src="./canvas_painter_gif/gif.worker.js" type="text/javascript"></script>
-<script src="./canvas_painter_gif/CanvasWidget.js" type="text/javascript"></script>
-<script src="./canvas_painter_gif/CanvasPainter.js" type="text/javascript"></script>
-<script src="./canvas_painter_gif/CPWidgets.js" type="text/javascript"></script>
-<script src="./canvas_painter_gif/CPAnimator.js" type="text/javascript"></script>
-<script src="./canvas_painter_gif/CPDrawing.js" type="text/javascript"></script>
+<script src="./gif.js" type="text/javascript"></script>
+<script src="./gif.worker.js" type="text/javascript"></script>
+<script src="./CanvasWidget.js" type="text/javascript"></script>
+<script src="./CanvasPainter.js" type="text/javascript"></script>
+<script src="./CPWidgets.js" type="text/javascript"></script>
+<script src="./CPAnimator.js" type="text/javascript"></script>
+<script src="./CPDrawing.js" type="text/javascript"></script>
 
 <style type="text/css">
 	body {
