--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
     <div class="skill">
       <h3>skills</h3>
       <section>
-        <p>HTML/CSS/Javascript/Ruby/PHP/Objective-C/Golang/SQL</p>
-        <p>Ruby on Rails/CodeIgniter/Backbone</p>
-        <p>AWS(EC2/RDS/S3/Cloudfront/Route53/SNS/SES/Cloudwatch)</p>
-        <p>MySQL/Redis</p>
+        <p>HTML/CSS/Javascript/Ruby/PHP</p>
+        <p>Ruby on Rails/CodeIgniter</p>
       </section>
     </div>
     <div class="sites" id="sites">
@@ -45,6 +43,7 @@
     </div>
     <div class="sites" id="sites">
       <h3>Works</h3>
+      <h4>Sites</h4>
       <ul>
         <li>
           <a href="http://gifmagazine.net/" target="_blank">GIFMAGAZINE</a>
@@ -65,6 +64,33 @@
         <li>
           <a href="https://itunes.apple.com/ja/app/razokulover/id845738726?l=ja&ls=1&mt=8" target="_blank">razokulover</a>
           <p>This is my client app created for iOS users</p>
+        </li>
+      </ul>
+      <h4>Library</h4>
+      <ul>
+        <li>
+          <a href="https://github.com/YuheiNakasaka/xvideos_helper" target="_blank">xvideos helper</a>
+          <p>the Ruby gem for crawling xvideos videos</p>
+        </li>
+        <li>
+          <a href="https://github.com/YuheiNakasaka/bug-to-dragon" target="_blank">bug to dragon</a>
+          <p>the joke Google Chrome extension for converting "bug" to "dragon" in web pages you visit</p>
+        </li>
+        <li>
+          <a href="https://github.com/YuheiNakasaka/rama" target="_blank">rama</a>
+          <p>Rama is the Ruby gem to convert movie to a sprite image</p>
+        </li>
+        <li>
+          <a href="https://github.com/YuheiNakasaka/google_image_crawler" target="_blank">Google Image Crawler</a>
+          <p>Google Image Crawler</p>
+        </li>
+        <li>
+          <a href="https://github.com/YuheiNakasaka/canvas_painter_gif" target="_blank">canvas paint gif</a>
+          <p>Canvas Painter is the canvas based paint app.I implemented additional feature to generate a gif image from canvas frames for it.</p>
+        </li>
+        <li>
+          <a href="https://github.com/YuheiNakasaka/yuheinakasaka.github.io/tree/master/loop-contable-gif-js" target="_blank">loop contable gif js</a>
+          <p>the Library for counting loops of animated gifs with js</p>
         </li>
       </ul>
     </div>
