--- a/tategaki-test/index.html
+++ b/tategaki-test/index.html
@@ -10,25 +10,9 @@
     </style>
   </head>
   <body onload="start();">
-    <canvas id="canvas"></canvas>
-  <script>
-  var fontSize = 30;
-  var width = $(window).width();
-  var height = 4500;
-  var x = (width/2)-fontSize;
-  var y = 40;
-  var margin = 5;
-
-  function start() {
-    // 生成GIFのメインcanvas
-    var canvas = $("#canvas")[0];
-    var context = canvas.getContext('2d');
-    canvas.width = width;
-    canvas.height = height;
-    _reset(context);
-    _verticalWrite(context);
-  }
-
+    <h1>canvas縦書き力技 Demo</h1>
+    <h2>Code</h2>
+    <pre>
   function _verticalWrite (ctx) {
     var textList = "ぉωTょレヽTょレヽ＜世レニτ〃ヵゝレナゑωτ〃￡ヵゝ？(＊・艸・)プ世ω世レヽ体育祭(≠τ＜яёTょレヽωτ〃￡ヵゝァ??ぅちら黄組ゐT=〃ヵゝら応援Ｕτ＜T=〃±レヽЙё★先生レ￡Tょレニ＜〃ゐTょωτ〃￡ヵゝ？ヵゝぇッτ(≠T=ら∧ωＵ〃∋ЗＵ＜".split('\n');
     var lineHeight = ctx.measureText("あ").width+margin;
@@ -45,6 +29,76 @@
           // 点系
           ctx.fillText(ch, x+lineHeight*0.6, y+lineHeight*j);
         } else if (ch.match(/\||i|l|I|!/) !== null) {
+          // 縦棒系
+          ctx.fillText(ch, x+lineHeight*0.25, y+lineHeight*j);
+        } else if (ch.match(/ー|ー|－|―|〜|~/) !== null) {
+          // 回転縦棒系
+          ctx.save();
+          ctx.translate(x,y+lineHeight*(j-1));
+          ctx.rotate(Math.PI/2);
+          ctx.fillText(ch, 5, -2);
+          ctx.restore();
+        } else if (ch.match(/\(|\)|\[|\]|【|】/) !== null) {
+          // 回転括弧系
+          ctx.save();
+          ctx.translate(x,y+lineHeight*(j-1));
+          ctx.rotate(Math.PI/2);
+          ctx.fillText(ch, 5, -4.5);
+          ctx.restore();
+        } else if (ch.match(/=/) !== null) {
+          // 回転イコール
+          ctx.save();
+          ctx.translate(x,y+lineHeight*(j-1));
+          ctx.rotate(Math.PI/2);
+          ctx.fillText(ch, 10, -4);
+          ctx.restore();
+        } else if (ch.match(/[0-9a-zA-Z&%$#"']+/) != null) {
+          // 半角とか
+          ctx.fillText(ch, x+lineHeight*0.1, y+lineHeight*j);
+        } else {
+          // その他
+          ctx.fillText(ch, x-lineHeight*i, y+lineHeight*j);
+        }
+      });
+    });
+  };
+    </pre>
+    <h2>Demo</h2>
+    <canvas id="canvas"></canvas>
+  <script>
+  var fontSize = 30;
+  var width = $(window).width();
+  var height = 24000;
+  var x = (width/2)-fontSize;
+  var y = 40;
+  var margin = 5;
+
+  function start() {
+    // 生成GIFのメインcanvas
+    var canvas = $("#canvas")[0];
+    var context = canvas.getContext('2d');
+    canvas.width = width;
+    canvas.height = height;
+    _reset(context);
+    _verticalWrite(context);
+  }
+
+  function _verticalWrite (ctx) {
+    var textList = "ＡＢＣＤＥＦＧＨＩＪＫＬＭＮＯＰＱＲＳＴＵＶＷＸＹＺａｂｃｄｅｆｇｈｉｊｋｌｍｎｏｐｑｒｓｔｕｖｗｘｙｚ０１２３４５６７８９ァアィイゥウェエォオカガキギクグケゲコゴサザシジスズセゼソゾタダチヂッツヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモャヤュユョヨラリルレロヮワヰヱヲンヴヵヶぁあぃいぅうぇえぉおかがきぎくぐけげこごさざしじすずせぜそぞただちぢっつづてでとどなにぬねのはばぱひびぴふぶぷへべぺほぼぽまみむめもゃやゅゆょよらりるれろゎわゐゑをんｱｲｳｴｵｶｷｸｹｺｻｼｽｾｿﾀﾁﾂﾃﾄﾅﾆﾇﾈﾉﾊﾋﾌﾍﾎﾏﾐﾑﾒﾓﾔﾕﾖﾗﾘﾙﾚﾛﾜｦﾝｧｨｩｪｫｬｭｮｯｰﾞﾟ｡｢｣､･!\"#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\]^_`abcdefghijklmnopqrstuvwxyz{|}~　、。，．・：；？！゛゜´｀¨＾￣＿ヽヾゝゞ〃仝々〆〇ー―‐／＼～∥｜…‥‘’“”（）〔〕［］｛｝〈〉《》「」『』【】＋－±×÷＝≠＜＞≦≧∞∴♂♀°′″℃￥＄￠￡％＃＆＊＠§☆★○●◎◇◆□■△▲▽▼※〒→←↑↓〓∈∋⊆⊇⊂⊃∪∩∧∨￢⇒⇔∀∃∠⊥⌒∂∇≡≒≪≫√∽∝∵∫∬Å‰♯♭♪†‡¶◯─│┌┐┘└├┬┤┴┼━┃┏┓┛┗┣┳┫┻╋┠┯┨┷┿┝┰┥┸╂ΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩαβγδεζηθικλμνξοπρστυφχψωАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя".split('\n');
+    var lineHeight = ctx.measureText("あ").width+margin;
+    textList.forEach(function(elm, i) {
+      [].forEach.call(elm, function(ch, j) {
+        ctx.fillStyle = "rgba(0,0,0,1)"; // 文字色
+        if(ch.match(/「|『/) !== null) {
+          // 鍵かっこ始まり
+          ctx.fillText(ch, x-lineHeight*0.5, y+lineHeight*j);
+        } else if(ch.match(/」|』/) !== null) {
+          // 鍵かっこ終わり
+          ctx.fillText(ch, x+lineHeight*0.6, y+lineHeight*j);
+        } else if(ch.match(/、|。|,|\./) !== null) {
+          // 点系
+          ctx.fillText(ch, x+lineHeight*0.6, y+lineHeight*j);
+        } else if (ch.match(/\||i|l|I|j|!/) !== null) {
           // 縦棒系
           ctx.fillText(ch, x+lineHeight*0.25, y+lineHeight*j);
         } else if (ch.match(/ー|ー|－|―|〜|~/) !== null) {
