fix description in image to wave

--- a/image_to_wave/index.html
+++ b/image_to_wave/index.html
@@ -36,7 +36,7 @@
 <body>
   <div id="wrap">
     <h1>画像から音を鳴らす</h1>
-    <p class="desc">画像のピクセルごとのRGB値の平均をキー(C~B)+オクターブ(3~7)に収まるように対応付けし、wavファイルを生成している。試すにはファイル選択をして画像を選び、再生を押す。</p>
+    <p class="desc">画像のピクセルごとのRGB値の平均をキー(C~B)+適当なオクターブ内に収まるように対応付けし、wavファイルを生成している。試すにはファイル選択をして画像を選び、再生を押す。</p>
     <img src id="imgDiv" crossorigin='Anonymous'>
   <br>
     <input type="file" id="inputImg" accept="image/*">
