--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div class="wrap" id="wrap">
     <div class="title">
       <h2>About Yuhei Nakasaka(razokulover)</h2>
-      <img src="http://twiticon.herokuapp.com/razokulover/bigger">
+      <img src="http://img.gifmagazine.net/gifmagazine/000thumbnail/images/4/thumb.png">
     </div>
     <div class="intro">
       <section>
@@ -20,9 +20,10 @@
     <div class="skill">
       <h3>skills(use/used in work)</h3>
       <section>
-        <p>Javascript/Ruby/PHP/Golang</p>
+        <p>Ruby/Javascript/PHP/Golang</p>
         <p>Ruby on Rails/CodeIgniter</p>
         <p>AWS</p>
+        <p>GCP</p>
       </section>
     </div>
     <div class="sites" id="sites">
@@ -68,11 +69,19 @@
         </li>
         <li>
           <a href="http://jigentter.com/" target="_blank">Jigenter</a>
-          <p>Jigentter is a simple web app to post tweets deleted by about an hour. </p>
+          <p>[Already closed]Jigentter is a simple web app to post tweets deleted by about an hour. </p>
         </li>
       </ul>
       <h4>Library</h4>
       <ul>
+        <li>
+          <a href="https://github.com/YuheiNakasaka/renchin" target="_blank">renchin</a>
+          <p>the Ruby gem for handling and converting gif animations</p>
+        </li>
+        <li>
+          <a href="https://github.com/YuheiNakasaka/livedoor-blog-atom-pub-rb" target="_blank">livedoor blog atom pub</a>
+          <p>the Ruby gem for the client of the Livedoor atom pub api</p>
+        </li>
         <li>
           <a href="https://github.com/YuheiNakasaka/xvideos_helper" target="_blank">xvideos helper</a>
           <p>the Ruby gem for crawling xvideos videos</p>
