add link of others

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
     </section>
     <section>
       <div class="inner">
+        <h1>その他</h1>
+        <p>・<a href="http://nlab.itmedia.co.jp/nl/articles/1401/27/news095.html" target="_blank">Google Adwordsで彼女ゲットの男性、ブログで幸せの報告　「入籍いたしました」</a></p>
+      </div>
+    </section>
+    <section>
+      <div class="inner">
         <h1>Links</h1>
         <ul>
           <li>
