--- a/audio-visualizer-vr/index.html
+++ b/audio-visualizer-vr/index.html
@@ -54,6 +54,7 @@
   <div id="wrap"></div>
   <div id="info">
     <div id="playback-btn">
+      <button id="fullBtn">Full</button>
       <button id="play"><i class="play"></i></button>
       <img id="loading-img" src="loading.svg">
     </div>
