--- a/audio-visualizer-vr/index.html
+++ b/audio-visualizer-vr/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="./libs/eventEmitter.js"></script>
     <script type="text/javascript" src="./libs/DeviceOrientationControls.js"></script>
     <script type="text/javascript" src="./libs/StereoEffect.js"></script>
+    <script type="text/javascript" src="./libs/screenfull.min.js"></script>
     <script type="text/javascript" src="./main.js"></script>
     <style>
         body {
