TOPサイト変更

--- a/index.html
+++ b/index.html
@@ -21,56 +21,7 @@
 </head>
 <body>
   <div class="wrap" id="wrap">
-    <section>
-      <div class="icon">
-        <img src="http://img.gifmagazine.net/gifmagazine/000thumbnail/images/4/thumb.png"/>
-      </div>
-    </section>
-    <section>
-      <div class="inner">
-        <h1>自己紹介</h1>
-        <ul>
-          <li>名前: 中坂雄平(razokulover)</li>
-          <li>住居: 東京都</li>
-          <li>趣味: webで何かを作る・詰将棋を解く</li>
-        </ul>
-      </div>
-    </section>
-    <section>
-      <div class="inner">
-        <h1>仕事</h1>
-        <p>
-          仕事ではRuby,Python,Javascriptを主に使ったWebアプリケーションのフロント/サーバを作ったり。インフラはクラウドベースでAWSが主。GCPもある程度わかる。
-          クローラ,検索サーバ,広告サーバ,ログ収集システムなどwebサービスでよく用いられるシステムは一通り構築経験あり。Electronを使ったデスクトップアプリ作成。
-          Imagemagick,FFmpeg,gifsicle等を用いた基本的な画像処理の知識アリ。
-        </p>
-      </div>
-    </section>
-    <section>
-      <div class="inner">
-        <h1>その他</h1>
-        <p>・<a href="http://nlab.itmedia.co.jp/nl/articles/1401/27/news095.html" target="_blank">Google Adwordsで彼女ゲットの男性、ブログで幸せの報告　「入籍いたしました」</a></p>
-      </div>
-    </section>
-    <section>
-      <div class="inner">
-        <h1>Links</h1>
-        <ul>
-          <li>
-            <a href="https://twitter.com/razokulover" target="_blank">Twitter</a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/YuheiNakasaka" target="_blank">Facebook</a>
-          </li>
-          <li>
-            <a href="https://github.com/YuheiNakasaka/" target="_blank">GitHub</a>
-          </li>
-          <li>
-            <a href="http://razokulover.hateblo.jp/" target="_blank">ブログ</a>
-          </li>
-        </ul>
-      </div>
-    </section>
+    <a href="https://razokulover.com/">移転先</a>
   </div>
 </body>
 </html>
