Redirect / to blog

--- a/index.html
+++ b/index.html
@@ -3,25 +3,9 @@
   <meta charset="UTF-8" />
   <title>中坂雄平(razokulover)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes" />
-  <style>
-  #wrap {
-    width: 100%;
-  }
-  section {
-    max-width: 600px;
-    margin: auto;
-  }
-  .icon {
-    text-align: center;
-  }
-  .icon img {
-    border-radius: 50%;
-  }
-  </style>
+  <script>
+    location.href = "https://yuheinakasaka.github.io/gialog-diary"
+  </script>
 </head>
-<body>
-  <div class="wrap" id="wrap">
-    <a href="https://razokulover.com/">移転先</a>
-  </div>
-</body>
+<body></body>
 </html>
